--- a/kumpulanMateri/matriks/index.html
+++ b/kumpulanMateri/matriks/index.html
@@ -41,7 +41,7 @@
               <a class="nav-link active" aria-current="page" href="../../index.html">HOME</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="../../daftarisimateri.html">Materi</a>
+              <a class="nav-link active" aria-current="page" href="../../daftarisimateri.html">Daftar Materi</a>
             </li>
             <li class="nav-item">
               <a class="nav-link active" aria-current="page" href="../../kumpulanSoal/">Kumpulan Soal</a>
