--- a/kumpulanSoal/index.html
+++ b/kumpulanSoal/index.html
@@ -50,7 +50,7 @@
               <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false"> Soal </a>
               <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                 <li><a class="dropdown-item" href="/kumpulanSoal/">Soal Latihan</a></li>
-                <li><a class="dropdown-item" href="/soalUlangan/matriks/">Soal Ulangan</a></li>
+                <li><a class="dropdown-item" href="/soalUlangan/">Soal Ulangan</a></li>
               </ul>
             </li>
           </ul>
@@ -73,7 +73,7 @@
                       </div>
                       <div class="offcanvas offcanvas-start" data-bs-scroll="true" tabindex="-1" id="offcanvasmatriks" aria-labelledby="offcanvasmatriksLabel">
                           <div class="offcanvas-header">
-                                <h5 class="offcanvas-title" id="offcanvasmatriksLabel">KUMPULAN LATISAN SOAL <br> Matriks Dasar dan Operasi Matriks</h5>
+                                <h5 class="offcanvas-title" id="offcanvasmatriksLabel">KUMPULAN LATIHAN SOAL <br> Matriks Dasar dan Operasi Matriks</h5>
                         <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
                         </div>
                      <div class="offcanvas-body">
