--- a/kumpulanSoal/matriks/soalmatriks5.html
+++ b/kumpulanSoal/matriks/soalmatriks5.html
@@ -27,7 +27,7 @@
     <script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
     <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
 
-    <title>kisi-kisi ulangan matriks</title>
+    <title>Latihan Soal Matriks (V)</title>
   </head>
   <body id="home">
     <!-- navbar start -->
@@ -50,7 +50,7 @@
               <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false"> Soal </a>
               <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                 <li><a class="dropdown-item" href="/kumpulanSoal/">Soal Latihan</a></li>
-                <li><a class="dropdown-item" href="/soalUlangan/matriks/">Soal Ulangan</a></li>
+                <li><a class="dropdown-item" href="/soalUlangan/">Soal Ulangan</a></li>
               </ul>
             </li>
           </ul>
@@ -64,7 +64,7 @@
       <div class="container pb-3">
         <div class="row">
           <div class="col-md-9" style="padding-top: 5rem">
-              <h2 class="text-center">Kisi-kisi Ulangan Matriks</h2>
+              <h2 class="text-center">Latihan Soal Matriks (V)</h2>
               <p class="fst-italic text-center"> Math_Dosman</p>
             <form name="matrikskisikisi-form">
               <div class="mb-3">
@@ -442,8 +442,6 @@
               </div>
               <div class="row justify-content-center text-center">
                 <div class="col">
-                  <label for="" class="fs-1" name="nilai">Nilai : </label>
-                  <div id="nilai" class="fs-1"></div>
                   <button type="submit" class="btn btn-primary btn-kirim" onclick="kirim()">KIRIM</button>
                   <button class="btn btn-primary btn-loading d-none" type="button" disabled>
                     <span class="spinner-border spinner-border-sm" role="status" aria-hidden="true"></span>
