--- a/kumpulanSoal/matriks/soalmatriks2.html
+++ b/kumpulanSoal/matriks/soalmatriks2.html
@@ -47,7 +47,7 @@
               <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false"> Soal </a>
               <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                 <li><a class="dropdown-item" href="/kumpulanSoal/">Soal Latihan</a></li>
-                <li><a class="dropdown-item" href="/soalUlangan/matriks/">Soal Ulangan</a></li>
+                <li><a class="dropdown-item" href="/soalUlangan/">Soal Ulangan</a></li>
               </ul>
             </li>
           </ul>
