--- a/soalUlangan/matriks/zr9v18iv11q5fu0g2q.html
+++ b/soalUlangan/matriks/zr9v18iv11q5fu0g2q.html
@@ -49,8 +49,8 @@
             <li class="nav-item dropdown">
               <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false"> Soal </a>
               <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                <li><a class="dropdown-item" href="/kumpulanSoal/matriks/">Soal Latihan</a></li>
-                <li><a class="dropdown-item" href="/soalUlangan/matriks/">Soal Ulangan</a></li>
+                <li><a class="dropdown-item" href="/kumpulanSoal/">Soal Latihan</a></li>
+                <li><a class="dropdown-item" href="/soalUlangan/">Soal Ulangan</a></li>
               </ul>
             </li>
           </ul>
