--- a/kumpulanSoal/matriks/index.html
+++ b/kumpulanSoal/matriks/index.html
@@ -59,13 +59,37 @@
     </nav>
     <!-- navbar end -->
 
-    <section style="padding-top: 7rem; padding-bottom: 9rem;" class="mb-3">
+    <section style="padding-top: 7rem; padding-bottom: 7rem;">
         <div class="container">
-            <div class="row">
-                <div class="col text-center">
-                    <h1>Kumpulan Latihan Soal<br> Matriks Dasar dan Operasi Matriks</h1>
-            </div>
-        </div>
+            <div class="row justify-content-center text-center">
+              <h1>Kumpulan Latihan Soal<br> Matriks Dasar dan Operasi Matriks</h1>
+                      <div class="card" style="width: 15rem;">
+                          <img src="../../home/9matriks.png" class="card-img-top img-fluid" alt="9matriks.png">
+                          <div class="card-body">
+                            <p class="card-text">Kumpulan latihan soal materi Matriks dasar dan Operasi Matriks</p>
+                            <button class="btn btn-primary" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasmatriks" aria-controls="offcanvasmatriks">PILIH PAKET SOAL</button>
+                          </div>
+                        </div>
+                        
+                        <div class="offcanvas offcanvas-start" data-bs-scroll="true" tabindex="-1" id="offcanvasmatriks" aria-labelledby="offcanvasmatriksLabel">
+                            <div class="offcanvas-header">
+                                  <h5 class="offcanvas-title" id="offcanvasmatriksLabel">KUMPULAN LATIHAN SOAL <br> Matriks Dasar dan Operasi Matriks</h5>
+                          <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+                          </div>
+                       <div class="offcanvas-body">
+                          <div class="card" style="width: 100%;">
+                              <ul class="list-group list-group-flush fw-bold">
+                                <a href="/kumpulanSoal/matriks/soalmatriks1.html" style="text-decoration: none;"><li class="list-group-item">MATRIKS PAKET 1 (10 SOAL) </li></a>
+                                <a href="/kumpulanSoal/matriks/soalmatriks2.html" style="text-decoration: none;"><li class="list-group-item">MATRIKS PAKET 2 (15 SOAL) </li></a>
+                                <a href="/kumpulanSoal/matriks/soalmatriks3.html" style="text-decoration: none;"><li class="list-group-item">MATRIKS PAKET 3 (15 SOAL) </li></a>
+                                <a href="/kumpulanSoal/matriks/soalmatriks4.html" style="text-decoration: none;"><li class="list-group-item">MATRIKS PAKET 4 (15 SOAL) </li></a>
+                                <a href="/kumpulanSoal/matriks/soalmatriks5.html" style="text-decoration: none;"><li class="list-group-item">MATRIKS PAKET 5 (20 SOAL) </li></a>
+                              </ul>
+                            </div>
+                      </div>
+                      </div>
+                </div>
+                </div>
     </section>
 
     
