--- a/kumpulanMateri/matriks/index.html
+++ b/kumpulanMateri/matriks/index.html
@@ -53,7 +53,7 @@
     <!-- navbar end -->
 <!-- AWAL MATERI -->
 <div class="container" style="padding-top: 7rem;">
-    <div class="row">
+    <div class="row justify-content-center">
       <div class="col-sm-9" >
             <section id="intro">
               <div class="text-center"><h2>PEMAHAMAN MATRIKS</h2></div>
@@ -575,7 +575,7 @@
                 Untuk lebih memahami penjumlahan dua buah matriks atau lebih, perhatikan contoh berikut!
                    <!-- COntoh 5.1 -->
                   <div class="row justify-content-center">
-                    <div class="col-md-9 border">
+                    <div class="col-md-9 border overflow-auto">
                       <div class="badge bg-primary text-wrap fs-6" style="width: 8rem">CONTOH 5.1</div> <br>
                       Jika diketahui \(\mathbf{A}=\begin{pmatrix} 2&-5&7\\ 4&2&-1 \end{pmatrix} \), \(\mathbf{B}=\begin{pmatrix} 0&-3\\ 2&2 \\ -1&4\end{pmatrix} \) dan \(\mathbf{C}=\begin{pmatrix} 0&-3&-2\\ -1&3&5 \end{pmatrix} \), tentukanlah!
                       <br />
