atur tata letak

--- a/kumpulanMateri/matriks/index.html
+++ b/kumpulanMateri/matriks/index.html
@@ -1301,7 +1301,7 @@
                 <ol type="a">
                   <li>Matriks \(B\) merupakan transpose dari matriks \(A\), sehingga \(\text{det} (B) = \text{det} (A) = - 48\)</li>
                   <li>Matriks \(C\) merupakan matriks \(A\) yang baris kedua ditukar dengan baris pertama, sehingga \(\text{det}(C)=-\text{det}(A)=48\).</li>
-                  <li>Matriks \(D\) merupakan matriks \(A\) yang baris kedua dikalikan dengan \(2\), sehingga \(\text{det}(D)=2.\text{det}(A)=2.(-48)=-96\).</li>
+                  <li>Matriks \(D\) merupakan matriks \(A\) yang baris kedua dikalikan dengan \(2\), sehingga <br> \(\text{det}(D)=2.\text{det}(A)=2.(-48)=-96\).</li>
                 </ol>
               </div>
             </div>
@@ -1367,7 +1367,8 @@
               Substitusikan \(x\) pada persamaan (1), sehingga diperoleh $$u=\frac{-c}{ad-bc}$$ <br />
               Dengan cara yang sama seperti di atas, akan diperoleh juga 
               $$y=\frac{-b}{ad-bc}$$ dan $$v=\frac{a}{ad-bc}$$ Dengan demikian $$\begin{align}A^{-1} &= \begin{bmatrix}\frac{d}{ad-bc} & & \frac{-b}{ad-bc} \\ \frac{-c}{ad-bc} & &
-              \frac{a}{ad-bc}\end{bmatrix} \\ &= \frac{1}{ad-bc}\begin{bmatrix}d&-b \\ -c&a \end{bmatrix}, \text{dengan } ad-bc \ne 0 \end{align} $$
+              \frac{a}{ad-bc}\end{bmatrix} \\ &= \frac{1}{ad-bc}\begin{bmatrix}d&-b \\ -c&a \end{bmatrix} \end{align} $$
+              $$\text{dengan } ad-bc \ne 0$$
               <p>
                 Jika determinan \(A=0\) atau \(ad-bc=0\), maka pembagian tersebut tidak terdefinisikan sehingga \(A^{-1}\) tidak ada. Matriks yang tidak mempunyai invers, disebut <i>matriks singular.</i> JIka determinan \(A \ne 0\) atau
                 \(ad-bc \ne 0\), maka matriks \(A\) disebut <i>matriks non singular.</i> <br />
@@ -1375,7 +1376,7 @@
               Dari uraian di atas dapat disimpulkan sebagai berikut.
               <div class="row justify-content-center">
                 <div class="col-md text-center border bg-warning p-2 rounded rounded-4 shadow">
-                  \(Invers \: matriks \: A=\begin{bmatrix}a&b \\ c&d \end{bmatrix}\: adalah \) \( A^{-1}=\frac{1}{ad-bc}\begin{bmatrix}d&-b \\ -c&a \end{bmatrix},\: dengan \: ad-bc\ne 0\)
+                  \(Invers \: matriks \: A=\begin{bmatrix}a&b \\ c&d \end{bmatrix}\: adalah \) \( A^{-1}=\frac{1}{ad-bc}\begin{bmatrix}d&-b \\ -c&a \end{bmatrix},\)\(\: dengan \: ad-bc\ne 0\)
                 </div>
               </div>
 
