--- a/dosman/sukaduka/index.html
+++ b/dosman/sukaduka/index.html
@@ -39,9 +39,9 @@
     crossorigin="anonymous"></script>
     <script async src="https://tally.so/widgets/embed.js"></script>
   </head>
-  <body id="home">
+  <body>
     <!-- navbar start -->
-    <nav class="navbar navbar-expand-lg navbar-dark bg-primary shadow fixed-top">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-primary shadow">
       <div class="container">
         <a href="/index.html"><img src="../../home/logonew.png" alt="logo" width="55" height="55" class="rounded-circle" /></a>
         <a class="navbar-brand ms-1 fw-bold" href="/index.html">math dosman</a>
@@ -68,30 +68,34 @@
       </div>
     </nav>
     <!-- navbar end -->
-    <section style=" padding-top: 6rem; width: 800;">
-        <div class="container">
+    <div id="wrap" style="padding-top: 5rem;" >
+      <div id="main" class="container clear-top">
             <div class="row">
                 <div class="col-md-9">
-                    <iframe data-tally-src="https://tally.so/embed/nWOWdP?transparentBackground=1&dynamicHeight=1" width="100%" height="700" frameborder="0" marginheight="0" marginwidth="0" title="PENDATAAN SUKA DUKA DOSMAN"></iframe><script>var d=document,w="https://tally.so/widgets/embed.js",v=function(){"undefined"!=typeof Tally?Tally.loadEmbeds():d.querySelectorAll("iframe[data-tally-src]:not([src])").forEach((function(e){e.src=e.dataset.tallySrc}))};if(d.querySelector('script[src="'+w+'"]'))v();else{var s=d.createElement("script");s.src=w,s.onload=v,s.onerror=v,d.body.appendChild(s);}</script>
+                    <iframe data-tally-src="https://tally.so/embed/nWOWdP?transparentBackground=1&dynamicHeight=1" width="100%" height="550" frameborder="0" marginheight="0" marginwidth="0" title="PENDATAAN SUKA DUKA DOSMAN"></iframe><script>var d=document,w="https://tally.so/widgets/embed.js",v=function(){"undefined"!=typeof Tally?Tally.loadEmbeds():d.querySelectorAll("iframe[data-tally-src]:not([src])").forEach((function(e){e.src=e.dataset.tallySrc}))};if(d.querySelector('script[src="'+w+'"]'))v();else{var s=d.createElement("script");s.src=w,s.onload=v,s.onerror=v,d.body.appendChild(s);}</script>
 
                 </div>
                 <div class="col-md-3">
-                  <div class="card" style="width: 18rem;">
-                    <img src="../../home/logodosman.png" class="card-img-top" alt="logodosman">
+                  <div class="card text-center">
+                    <div class="card-header">
+                      <img src="../../home/logodosman.png" class="card-img-top" alt="logodosman">
+                    </div>
                     <div class="card-body">
-                      <h5 class="card-title text-center">Suka Duka</h5>
+                      <h5 class="card-title">Suka Duka Dosman</h5>
                       <p class="card-text">Klik link berikut untuk mengetahui data pembayaran iuran suka duka</p>
-                      <a href="https://docs.google.com/spreadsheets/d/1-iUn-9_OpsaO7Guu8-sDX2qPP0kD7iGciT5s3DH0TIY/edit?usp=sharing" class="btn btn-primary" target="_blank">Data Pembayaran SukaDuka</a>
+                      <a href="https://docs.google.com/spreadsheets/d/1-iUn-9_OpsaO7Guu8-sDX2qPP0kD7iGciT5s3DH0TIY/edit?usp=sharing" class="btn btn-primary" target="blank">Data Pembayaran SukaDuka</a>
+                    </div>
+                    <div class="card-footer text-muted">
+                      www.mathdosman.site
                     </div>
                   </div>
                 </div>
             </div>
-        </div>
-    </section>
-
+  </div>
+</div>
     
     <!-- footer start -->
-    <footer class="bg-primary text-center text-white d-flex justify-content-center">
+    <footer class="bg-primary text-center text-whith d-flex justify-content-center footer">
       <p>
         Created with
         <svg xmlns="http://www.w3.org/2000/svg" width="10" height="10" fill="currentColor" class="bi bi-heart-fill text-danger" viewBox="0 0 16 16">
@@ -102,8 +106,6 @@
     </footer>
     <!-- footer end -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
-    <amp-auto-ads type="adsense"
-    data-ad-client="ca-pub-4649430696681971">
-</amp-auto-ads>
+    <amp-auto-ads type="adsense" data-ad-client="ca-pub-4649430696681971"></amp-auto-ads>
   </body>
 </html>
