--- a/dosman/sukaduka/index.html
+++ b/dosman/sukaduka/index.html
@@ -68,7 +68,7 @@
       </div>
     </nav>
     <!-- navbar end -->
-    <div id="wrap" style="padding-top: 5rem;" >
+    <div id="wrap" style="padding-top: 5rem; padding-bottom: 10rem;" >
       <div id="main" class="container clear-top">
             <div class="row">
                 <div class="col-md-9">
@@ -95,7 +95,7 @@
 </div>
     
     <!-- footer start -->
-    <footer class="bg-primary text-center text-whith d-flex justify-content-center footer">
+    <footer class="bg-primary text-center text-whith d-flex justify-content-center">
       <p>
         Created with
         <svg xmlns="http://www.w3.org/2000/svg" width="10" height="10" fill="currentColor" class="bi bi-heart-fill text-danger" viewBox="0 0 16 16">
