--- a/kumpulanSoal/index.html
+++ b/kumpulanSoal/index.html
@@ -31,7 +31,7 @@
   </head>
   <body id="home">
     <!-- navbar start -->
-    <nav class="navbar navbar-expand-lg navbar-dark bg-primary shadow fixed-top">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-primary shadow">
       <div class="container">
         <a href="../../"><img src="../../home/logonew.png" alt="logo" width="55" height="55" class="rounded-circle" /></a>
         <a class="navbar-brand ms-1 fw-bold" href="/">Math Dosman</a>
@@ -59,7 +59,7 @@
     </nav>
     <!-- navbar end -->
 
-    <section style="padding-top: 7rem; padding-bottom: 9rem;" class="mb-3">
+    <section style="padding-bottom: 9rem;" class="mb-3">
         <div class="container text-center">
             <h1>Kumpulan Latihan Soal<br> SEMUA MATERI</h1>
             <div class="row">
@@ -79,7 +79,7 @@
                      <div class="offcanvas-body">
                         <div class="card" style="width: 100%;">
                             <ul class="list-group list-group-flush">
-                              <a href="/kumpulanSoal/matriks/soalmatriks1.html" style="text-decoration: none;"><li class="list-group-item">MATRIKS PAKET 1 (10 SOAL) </li></a>
+                              <a href="/kumpulanSoal/transformasiGeometri/" style="text-decoration: none;"><li class="list-group-item">MATRIKS PAKET 1 (10 SOAL) </li></a>
                               <a href="/kumpulanSoal/matriks/soalmatriks2.html" style="text-decoration: none;"><li class="list-group-item">MATRIKS PAKET 2 (15 SOAL) </li></a>
                               <a href="/kumpulanSoal/matriks/soalmatriks3.html" style="text-decoration: none;"><li class="list-group-item">MATRIKS PAKET 3 (15 SOAL) </li></a>
                               <a href="/kumpulanSoal/matriks/soalmatriks4.html" style="text-decoration: none;"><li class="list-group-item">MATRIKS PAKET 4 (15 SOAL) </li></a>
@@ -89,7 +89,34 @@
                     </div>
                     </div>
                 </div>
-                <div class="col-sm-3"></div>
+                <div class="col-sm-3">
+                  <div class="card" style="width: 15rem;">
+                    <img src="../home/11transformasigeometri.png" class="card-img-top img-fluid" alt="11transformasigeometri.png">
+                    <div class="card-body">
+                      <p class="card-text">Kumpulan latihan soal Transformasi Geometri</p>
+                      <button class="btn btn-primary" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvastransformasiGeometri" aria-controls="offcanvastransformasiGeometri">PILIH PAKET SOAL</button>
+                    </div>
+                  </div>
+                  <div class="offcanvas offcanvas-start" data-bs-scroll="true" tabindex="-1" id="offcanvastransformasiGeometri" aria-labelledby="offcanvastransformasiGeometriLabel">
+                      <div class="offcanvas-header">
+                            <h5 class="offcanvas-title" id="offcanvastransformasiGeometriLabel">KUMPULAN LATIHAN SOAL <br>Transformasi Geometri</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+                    </div>
+                 <div class="offcanvas-body">
+                    <div class="card" style="width: 100%;">
+                        <ul class="list-group list-group-flush">
+                          <a href="/kumpulanSoal/transformasiGeometri/translasisoal.html" style="text-decoration: none;"><li class="list-group-item">Latihan Soal Translasi </li></a>
+                          <a href="/kumpulanSoal/transformasiGeometri/refleksiSoal.html" style="text-decoration: none;"><li class="list-group-item">Latihan Soal Refleksi </li></a>
+                          <a href="/kumpulanSoal/transformasiGeometri/rotasiSoal.html" style="text-decoration: none;"><li class="list-group-item">Latihan Soal Rotasi </li></a>
+                          <a href="/kumpulanSoal/transformasiGeometri/dilatasiSoal.html" style="text-decoration: none;"><li class="list-group-item">Latihan Soal Dilatasi </li></a>
+                          <a href="/kumpulanSoal/transformasiGeometri/tgkomposisi.html" style="text-decoration: none;"><li class="list-group-item">Latihan Soal Komposisi </li></a>
+                          <a href="/kumpulanSoal/transformasiGeometri/transgeo1.html" style="text-decoration: none;"><li class="list-group-item">Latihan Soal Transformasi Paket 1 </li></a>
+                          <a href="/kumpulanSoal/transformasiGeometri/transgeo2.html" style="text-decoration: none;"><li class="list-group-item">Latihan Soal Transformasi Paket 2 </li></a>
+                        </ul>
+                      </div>
+                </div>
+                </div>
+                </div>
                 <div class="col-sm-3"></div>
                 <div class="col-sm-3"></div>
             </div>
