--- a/kumpulanSoal/transformasiGeometri/rotasiSoal.html
+++ b/kumpulanSoal/transformasiGeometri/rotasiSoal.html
@@ -27,13 +27,13 @@
     <script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
     <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
     <link rel="stylesheet" href="style.css" />
-    <title>soal transformasi geometri 1</title>
+    <title>soal rotasi</title>
   </head>
   <body id="home">
     <!-- navbar start -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-primary shadow fixed-top">
       <div class="container">
-        <a href="../../"><img src="/matriks/soal/logonew.png" alt="logo" width="55" height="55" class="rounded-circle" /></a>
+        <a href="../../"><img src="/home/logonew.png" alt="logo" width="55" height="55" class="rounded-circle" /></a>
         <a class="navbar-brand ms-1 fw-bold" href="/">Math Dosman</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -57,14 +57,14 @@
       <div class="container">
         <div class="row justify-content-center">
           <div class="col-md-9" style="padding-top: 5rem;">
-            <h2 class="text-center">Latihan Soal <br> Transformasi Geometri II</h2>
+            <h2 class="text-center">Latihan Soal Rotasi</h2>
            <p class="text-center fst-italic"> Math_Dosman</p>
             <form name="translasi01-form">
               <div class="mb-3">
                     <label for="materi" class="form-label"><b>Materi</b></label>
                     <select type="text" id="materi" name="materi" class="form-control" aria-placeholder="materi" required>
                     <option value="">-- Pilih Materi --</option>
-                    <option value="TransformasiGeometri2">Transformasi Geometri II</option>
+                    <option value="Rotasi">Rotasi</option>
                     </select>
                 </div>
               <div class="mb-3">
@@ -387,7 +387,7 @@
       <div class="offcanvas-header">
         <h5 class="offcanvas-title" id="offcanvasWithBothOptionsLabel">
           KUNCI JAWABAN <br />
-          Latihan Soal Transformasi Geometri II
+          Latihan Soal Rotasi
         </h5>
         <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
       </div>
