--- a/kumpulanSoal/transformasiGeometri/refleksiSoal.html
+++ b/kumpulanSoal/transformasiGeometri/refleksiSoal.html
@@ -34,7 +34,7 @@ gtag('config', 'G-WWKYNJM30L');
 <!-- navbar start -->
 <nav class="navbar navbar-expand-lg navbar-dark bg-primary shadow fixed-top">
     <div class="container">
-        <a href="../../"><img src="/matriks/soal/logonew.png" alt="logo" width="55" height="55" class="rounded-circle" /></a>
+        <a href="../../"><img src="/home/logonew.png" alt="logo" width="55" height="55" class="rounded-circle" /></a>
         <a class="navbar-brand ms-1 fw-bold" href="/">Math Dosman</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
