--- a/daftarisimateri.html
+++ b/daftarisimateri.html
@@ -90,10 +90,10 @@
               <button type="button" class="list-group-item list-group-item-action">Pertidaksamaan Linear Dua Variabel</button>
               <button type="button" class="list-group-item list-group-item-action">Program Linear</button>
                   <!-- Start Matriks -->
-              <button class="btn list-group-item list-group-item-action fw-bold" type="button" data-bs-toggle="collapse" data-bs-target="#collapseExample" aria-expanded="false" aria-controls="collapseExample">
+              <button class="btn list-group-item list-group-item-action fw-bold" type="button" data-bs-toggle="collapse" data-bs-target="#collapsematriks" aria-expanded="false" aria-controls="collapsematriks">
                   Matriks Dasar & Operasi Matriks
                 </button>
-              <div class="collapse" id="collapseExample">
+              <div class="collapse" id="collapsematriks">
                 <div class="card card-body">
                   <ul class="list-group">
                    <a href="/kumpulanMateri/matriks/" style="text-decoration: none;"> <li class="list-group-item">Materi</li> </a>
@@ -103,7 +103,20 @@
                 </div>
               </div>
               <!-- end Matriks -->
-              <a href="/transformasi/" style="text-decoration: none"> <button type="button" class="list-group-item list-group-item-action fw-bold">Transformasi Geometri</button></a>
+                  <!-- Start Transformasi -->
+              <button class="btn list-group-item list-group-item-action fw-bold" type="button" data-bs-toggle="collapse" data-bs-target="#collapsetransformasi" aria-expanded="false" aria-controls="collapsetransformasi">
+                  Transformasi Geometri
+                </button>
+              <div class="collapse" id="collapsetransformasi">
+                <div class="card card-body">
+                  <ul class="list-group">
+                   <a href="/kumpulanMateri/transformasi/" style="text-decoration: none;"> <li class="list-group-item">Materi</li> </a>
+                   <a href="/kumpulanSoal/transformasiGeometri/" style="text-decoration: none;"> <li class="list-group-item">Soal Latihan</li> </a>
+                   <a href="/soalUlangan/transformasiGeometri/" style="text-decoration: none;"> <li class="list-group-item">Soal Ulangan</li> </a>
+                  </ul>
+                </div>
+              </div>
+              <!-- end Transformasi -->
               <button type="button" class="list-group-item list-group-item-action">Barisan dan Deret</button>
               <button type="button" class="list-group-item list-group-item-action">Limit Fungsi Aljabar</button>
               <button type="button" class="list-group-item list-group-item-action">Turunan Fungsi Aljabar</button>
