--- a/kumpulanMateri/transformasi/index.html
+++ b/kumpulanMateri/transformasi/index.html
@@ -49,7 +49,7 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav ms-auto">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="#offcanvasExample" data-bs-toggle="offcanvas" aria-controls="offcanvasExample">Daftar Isi</a>
+              <a class="nav-link active" aria-current="page" href="#offcanvasExample" data-bs-toggle="offcanvas" aria-controls="offcanvasExample">Jalan Pintas</a>
             </li>
             <li class="nav-item">
               <a class="nav-link active" aria-current="page" href="/transformasi/">Transformasi</a>
