--- a/kumpulanMateri/transformasi/index.html
+++ b/kumpulanMateri/transformasi/index.html
@@ -39,6 +39,7 @@
   </head>
   <body>
     <!-- navbar start -->
+    <!-- navbar start -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-primary shadow">
       <div class="container">
         <img src="../../home/logonew.png" alt="logo" width="55" height="55" class="rounded-circle" />
@@ -49,70 +50,20 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav ms-auto">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="#offcanvasExample" data-bs-toggle="offcanvas" aria-controls="offcanvasExample">Jalan Pintas</a>
+              <a class="nav-link active" aria-current="page" href="../../index.html">HOME</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="/transformasi/">Transformasi</a>
+              <a class="nav-link active" aria-current="page" href="../../daftarisimateri.html">Daftar Materi</a>
             </li>
-            <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false"> Sub Materi</a>
-              <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                <li>
-                  <a class="dropdown-item" href="/transformasi/translasi.html">Translasi</a>
-                </li>
-                <li><a class="dropdown-item" href="/transformasi/refleksi.html">Refleksi</a></li>
-                <li><a class="dropdown-item" href="/transformasi/rotasi.html">Rotasi</a></li>
-                <li><a class="dropdown-item" href="/transformasi/dilatasi.html">Dilatasi</a></li>
-                <li><a class="dropdown-item" href="/transformasi/kurva.html">Transformasi Kurva</a></li>
-                <li><a class="dropdown-item" href="/transformasi/komposisi.html">Komposisi</a></li>
-                <li><a class="dropdown-item" href="/transformasi/daftarsoal.html">Latihan Soal</a></li>
-              </ul>
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="../../kumpulanSoal/">Kumpulan Soal</a>
             </li>
           </ul>
         </div>
       </div>
     </nav>
     <!-- navbar end -->
-<!-- ======================================== OFFCANVAS START====================================================== -->
-<!-- ============================================================================================================== -->
-<div class="offcanvas offcanvas-start" tabindex="-1" id="offcanvasExample" aria-labelledby="offcanvasExampleLabel">
-  <div class="offcanvas-header">
-    <h5 class="offcanvas-title" id="offcanvasExampleLabel">DAFTAR ISI <br> www.mathdosman.site</h5>
-    <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
-  </div>
-  <div class="offcanvas-body">
-    <div>
-      Untuk mempermudah pencarian beberapa materi yang terdapat pada web ini silahkan gunakan link dibawah ini:
-    </div>
-    <ol class="fw-bold">
-      <li>
-        <div class="dropdown mt-3">
-          <div class="btn dropdown-toggle d-flex fw-bold" type="button" data-bs-toggle="dropdown">
-            Matriks
-          </div>
-          <ul class="dropdown-menu">
-            <li><a class="dropdown-item" href="../../kumpulanMateri/matriks/">Materi Matriks</a></li>
-            <li><a class="dropdown-item" href="../../kumpulanSoal/matriks/">Soal Latihan Matriks</a></li>
-            <li><a class="dropdown-item" href="../../soalUlangan/matriks/">Soal Ulangan</a></li>
-          </ul>
-        </div>
-      </li>
-      <li>
-        <div class="dropdown mt-3">
-          <div class="btn dropdown-toggle d-flex fw-bold" type="button" data-bs-toggle="dropdown">
-            Transformasi Geometri
-          </div>
-          <ul class="dropdown-menu">
-            <li><a class="dropdown-item" href="../transformasi/">Materi Transformasi Geometri</a></li>
-            <li><a class="dropdown-item" href="../../kumpulanSoal/transformasiGeometri/">Soal Latihan</a></li>
-            <li><a class="dropdown-item" href="../../soalUlangan/transformasiGeometri/">Soal Ulangan</a></li>
-        </div>
-      </li>
-    </ol>
-  </div>
-</div>
-<!-- ================================================================= OFFCANVAS END ======================================================================-->
-<!-- ====================================================================================================================================================== -->
+
         <!-- start materi 1 -->
         <section id="transformasi">
             <div class="container">
