--- a/kumpulanMateri/matriks/index.html
+++ b/kumpulanMateri/matriks/index.html
@@ -28,7 +28,7 @@
   </head>
   <body>
     <!-- navbar start -->
-    <nav class="navbar navbar-expand-lg navbar-dark bg-primary shadow fixed-top">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-primary shadow">
       <div class="container">
         <img src="../../home/logonew.png" alt="logo" width="55" height="55" class="rounded-circle" />
         <a class="navbar-brand ms-1 fw-bold" href="/">Math Dosman</a>
@@ -52,7 +52,7 @@
     </nav>
     <!-- navbar end -->
 <!-- AWAL MATERI -->
-<div class="container" style="padding-top: 7rem;">
+<div class="container">
     <div class="row justify-content-center">
       <div class="col-sm-9" >
             <section id="intro">
@@ -1648,7 +1648,7 @@
 <!-- div col-9 akhir -->
         </div>
         <div class="col-sm-3">
-          <div class="list-group sticky-top" style="padding-top: 5rem;">
+          <div class="list-group sticky-top pt-2" >
             <a href="#" class="list-group-item list-group-item-action active" aria-current="true">
               SUB MATERI MATRIKS
             </a>
