--- a/kumpulanSoal/transformasiGeometri/translasisoal.html
+++ b/kumpulanSoal/transformasiGeometri/translasisoal.html
@@ -41,10 +41,17 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav ms-auto">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="/transformasi/">Transformasi</a>
+              <a class="nav-link active" aria-current="page" href="/index.html">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="../../daftarisimateri.html">Daftar isi web</a>
+              <a class="nav-link active" aria-current="page" href="/daftarisimateri.html">Daftar Materi</a>
+            </li>
+            <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false"> Soal </a>
+              <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                <li><a class="dropdown-item" href="/kumpulanSoal/">Soal Latihan</a></li>
+                <li><a class="dropdown-item" href="/soalUlangan/matriks/">Soal Ulangan</a></li>
+              </ul>
             </li>
           </ul>
         </div>
@@ -363,15 +370,15 @@
           </div>
           <div class="col-md-3 d-block pb-2">
             <div class="list-group sticky-sm-top" style="padding-top: 5rem">
-              <a href="../index.html" class="list-group-item list-group-item-action active" aria-current="true"> HOME www.mathdosman.site </a>
-              <a href="/transformasi/latihansoal/translasisoal.html" class="list-group-item list-group-item-action">Latihan Soal Translasi</a>
-              <a href="/transformasi/latihansoal/refleksiSoal.html" class="list-group-item list-group-item-action">Latihan Soal Refleksi</a>
-              <a href="/transformasi/latihansoal/rotasiSoal.html" class="list-group-item list-group-item-action">Latihan Soal Rotasi</a>
-              <a href="/transformasi/latihansoal/dilatasiSoal.html" class="list-group-item list-group-item-action">Latihan Soal Dilatasi</a>
-              <a href="/transformasi/latihansoal/tgkomposisi.html" class="list-group-item list-group-item-action">Latihan Soal Transformasi Komposisi</a>
-              <a href="/transformasi/latihansoal/transgeo1.html" class="list-group-item list-group-item-action">Latihan Soal Transformasi Geometri I</a>
-              <a href="/transformasi/latihansoal/transgeo2.html" class="list-group-item list-group-item-action">Latihan Soal Transformasi Geometri II</a>
-              <a href="/transformasi/daftarsoal.html" class="list-group-item list-group-item-action">Kumpulan Latihan Soal</a>
+              <a href="../transformasiGeometri/" class="list-group-item list-group-item-action active" aria-current="true"> Transformasi Geometri </a>
+              <a href="../transformasiGeometri/translasisoal.html" class="list-group-item list-group-item-action">Latihan Soal Translasi</a>
+              <a href="../transformasiGeometri/refleksiSoal.html" class="list-group-item list-group-item-action">Latihan Soal Refleksi</a>
+              <a href="../transformasiGeometri/rotasiSoal.html" class="list-group-item list-group-item-action">Latihan Soal Rotasi</a>
+              <a href="../transformasiGeometri/dilatasiSoal.html" class="list-group-item list-group-item-action">Latihan Soal Dilatasi</a>
+              <a href="../transformasiGeometri/tgkomposisi.html" class="list-group-item list-group-item-action">Latihan Soal Transformasi Komposisi</a>
+              <a href="../transformasiGeometri/transgeo1.html" class="list-group-item list-group-item-action">Latihan Soal Transformasi Geometri I</a>
+              <a href="../transformasiGeometri/transgeo2.html" class="list-group-item list-group-item-action">Latihan Soal Transformasi Geometri II</a>
+              <a href="../../kumpulanMateri/transformasi/" class="list-group-item list-group-item-action">Materi Transformasi Geometri</a>
               <button class="btn btn-danger" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasWithBothOptions" aria-controls="offcanvasWithBothOptions" disabled>KLIK UNTUK MELIHAT KUNCI JAWABAN</button>
             </div>
         </div>
